# ai_2_ludo_game

./: CMakeLists.txt  README.md  custom_player.cpp  custom_player.h  evolution_data_var_2.csv  main.cpp  neural_network.cpp  neural_network.h  perceptron.cpp  perceptron.h  plots.m  test.py  weight.m  winrate.m
